--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
 <mat-slider min="1" max="100" step="1" value="1"></mat-slider>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+            <router-outlet></router-outlet>
+         </div>
+  </div>
+</div>
