--- a/src/app/collaborateurs/collaborateurs.component.html
+++ b/src/app/collaborateurs/collaborateurs.component.html
@@ -1,1 +1,3 @@
-<p>collaborateurs works!</p>
+<head><meta meta charset="utf-8"></head>
+<h2>Liste des collaborateurs</h2>
+<table mat-table></table>
