--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<mat-slider min="1" max="100" step="1" value="1"></mat-slider>
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
@@ -6,3 +5,4 @@
          </div>
   </div>
 </div>
+<app-collaborateurs></app-collaborateurs>
