--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,8 @@
-<p>header works!</p>
+<div id="navbar">
+	<ul>
+		<li class="elem"><img [src]="cheminImage" height="30" width="100"/></li>
+		<li ><a href="#home">Collaborateurs</a></li>
+		<li ><a href="#news">Projets</a></li>
+		<li ><a href="#contact">Clients</a></li>
+	</ul>
+</div>
