--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,8 @@
          </div>
   </div>
 </div>
+<main id="logout-button-holder">
+  <h2>Liste des collaborateurs</h2>
+  <div class="buttonAddCollab"><button style="float: right; margin-top: -50px;" mat-raised-button id="logout-button" (click)="openModal()">Ajouter un collaborateur</button></div>  
+</main>
 <app-collaborateurs></app-collaborateurs>
