--- a/src/app/modal-add-collaborateur/modal-add-collaborateur.component.html
+++ b/src/app/modal-add-collaborateur/modal-add-collaborateur.component.html
@@ -1,7 +1,12 @@
+<div class="search">
+    <input type="text" class="searchTerm" placeholder="recherche">
+  </div>
 <div id="modal-content-wrapper">
-    <header id="modal-header">
-        <h1 id="modal-title">Ajouter un collaborateur</h1>
-    </header>
+  <div class="wrap">
+</div>
+  <header id="modal-header">
+       <h1 id="modal-title">Ajouter un collaborateur</h1>
+  </header>
     <div class="row">
   <div class="col-sm-8 col-sm-offset-2">
     <form (ngSubmit)="onSubmit(f)" #f="ngForm">
