--- a/src/app/collaborateurs/collaborateurs.component.html
+++ b/src/app/collaborateurs/collaborateurs.component.html
@@ -1,7 +1,12 @@
 <head><meta meta charset="utf-8"></head>
+
+  <div class="search">
+    <input type="text" class="searchTerm" placeholder="recherche">
+  </div>
+
 <div class="mat-elevation-z8 data-table">
 	<mat-table #table [dataSource]="dataSource" matSort aria-label="Elements">
-
+    
     <!-- Id Column -->
     <ng-container matColumnDef="nom">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Nom</mat-header-cell>
