--- a/src/app/collaborateurs/collaborateurs.component.html
+++ b/src/app/collaborateurs/collaborateurs.component.html
@@ -1,7 +1,7 @@
 <head><meta meta charset="utf-8"></head>
 
   <div class="search">
-    <input type="text" class="searchTerm" placeholder="recherche">
+    <input [(ngModel)]="data" (ngModelChange)="change()" type="text" class="searchTerm" placeholder="recherche">
   </div>
 
 <div class="mat-elevation-z8 data-table">
