Ajout de plein de tucs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,8 @@
 </div>
 <main id="logout-button-holder">
   <h2>Liste des collaborateurs</h2>
-  <div class="buttonAddCollab"><button style="float: right; margin-top: -50px;" mat-raised-button id="logout-button" (click)="openModal()">Ajouter un collaborateur</button></div>  
+ 
 </main>
+
+<app-modal-add-collaborateur></app-modal-add-collaborateur>
 <app-collaborateurs></app-collaborateurs>
