--- a/src/app/modal-add-collaborateur/modal-add-collaborateur.component.html
+++ b/src/app/modal-add-collaborateur/modal-add-collaborateur.component.html
@@ -1,36 +1,83 @@
-<div class="search">
-    <input type="text" class="searchTerm" placeholder="recherche">
+<button style="float: right; margin-top: -30px;" type="button" mdbBtn color="black" rounded="true" data-toggle="modal" data-target="#basicExample"
+        (click)="frame.show()" mdbWavesEffect>Ajouter un collaborateur
+</button>
+
+<div mdbModal #frame="mdbModal" class="modal fade left" id="frameModalTop" tabindex="-1" role="dialog"
+     aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header text-center">
+        <h4 class="modal-title w-100 font-weight-bold">Write to us</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="frame.hide()">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body mx-3">
+        <div class="md-form mb-5">
+          <mdb-icon fas icon="user" class="prefix grey-text"></mdb-icon>
+          <input type="text" id="form34" class="form-control" mdbInput mdbValidate [formControl]="contactFormModalName">
+          <label for="form34">Your name</label>
+          <mdb-error
+            *ngIf="contactFormModalName.invalid && (contactFormModalName.dirty || contactFormModalName.touched)">Input
+            invalid
+          </mdb-error>
+          <mdb-success
+            *ngIf="contactFormModalName.valid && (contactFormModalName.dirty || contactFormModalName.touched)">Input
+            valid
+          </mdb-success>
+        </div>
+
+        <div class="md-form mb-5">
+          <mdb-icon fas icon="envelope" class="prefix grey-text"></mdb-icon>
+          <input type="email" id="form29" class="form-control" mdbInput mdbValidate
+                 [formControl]="contactFormModalEmail">
+          <label for="form29">Your email</label>
+          <mdb-error
+            *ngIf="contactFormModalEmail.invalid && (contactFormModalEmail.dirty || contactFormModalEmail.touched)">
+            Input invalid
+          </mdb-error>
+          <mdb-success
+            *ngIf="contactFormModalEmail.valid && (contactFormModalEmail.dirty || contactFormModalEmail.touched)">Input
+            valid
+          </mdb-success>
+        </div>
+
+        <div class="md-form mb-5">
+          <mdb-icon fas icon="tag" class="prefix grey-text"></mdb-icon>
+          <input type="text" id="form32" class="form-control" mdbInput mdbValidate
+                 [formControl]="contactFormModalSubject">
+          <label for="form32">Subject</label>
+          <mdb-error
+            *ngIf="contactFormModalSubject.invalid && (contactFormModalSubject.dirty || contactFormModalSubject.touched)">
+            Input invalid
+          </mdb-error>
+          <mdb-success
+            *ngIf="contactFormModalSubject.valid && (contactFormModalSubject.dirty || contactFormModalSubject.touched)">
+            Input valid
+          </mdb-success>
+        </div>
+
+        <div class="md-form">
+          <mdb-icon fas icon="pencil-alt" class="prefix grey-text"></mdb-icon>
+          <textarea type="text" id="form8" class="md-textarea form-control" rows="1" mdbInput mdbValidate
+                    [formControl]="contactFormModalMessage"></textarea>
+          <label for="form8">Your message</label>
+          <mdb-error
+            *ngIf="contactFormModalMessage.invalid && (contactFormModalMessage.dirty || contactFormModalMessage.touched)">
+            Input invalid
+          </mdb-error>
+          <mdb-success
+            *ngIf="contactFormModalMessage.valid && (contactFormModalMessage.dirty || contactFormModalMessage.touched)">
+            Input valid
+          </mdb-success>
+        </div>
+
+      </div>
+      <div class="modal-footer d-flex justify-content-center">
+        <button mdbBtn color="unique" class="waves-light" mdbWavesEffect>Send
+          <mdb-icon far icon="paper-plane" class="ml-1"></mdb-icon>
+        </button>
+      </div>
+    </div>
   </div>
-<div id="modal-content-wrapper">
-  <div class="wrap">
-</div>
-  <header id="modal-header">
-       <h1 id="modal-title">Ajouter un collaborateur</h1>
-  </header>
-    <div class="row">
-  <div class="col-sm-8 col-sm-offset-2">
-    <form (ngSubmit)="onSubmit(f)" #f="ngForm">
-      <div class="form-group">
-        <label for="name">
-          Nom
-        </label>
-        <input type="text" id="nom" class="form-control" name="nom" ngModel required>
-	  </div>
-	  <div class="form-group">
-        <label for="name">
-          Prenom
-        </label>
-        <input type="text" id="prenom" class="form-control" name="prenom" ngModel required>
-      </div>
-      <div class="form-group">
-        <label for="email">
-          Adresse mail
-        </label>
-        <input type="text" id="email" class="form-control" name="email" ngModel required>
-      </div>
-    <footer id="modal-footer">
-        <button mat-raised-button id="modal-action-button" (click)="onSubmit()">Logout</button>
-        <button mat-raised-button id="modal-cancel-button" (click)="closeModal()">Go back</button>
-	</footer>
-	</form></div>
 </div>
