--- a/src/app/collaborateurs/collaborateurs.component.html
+++ b/src/app/collaborateurs/collaborateurs.component.html
@@ -5,6 +5,9 @@
         <app-modal-add-collaborateur></app-modal-add-collaborateur>
         
       </span>
+      <div class="search">
+        <input [(ngModel)]="data" (ngModelChange)="change()" type="text" class="searchTerm" placeholder="recherche">
+      </div>
       <table class="table table-bordered table-responsive-md table-striped text-center">
         <tr>
           <th class="text-center">Nom</th>
@@ -12,24 +15,43 @@
           <th class="text-center">Adresse mail</th>
           <th class="text-center">Remove</th>
         </tr>
-        <tr *ngFor="let person of personList; let id = index">
-          <td>
-            <span (keyup)="changeValue(id, 'name', $event)" (blur)="updateList(id, 'name', $event)" contenteditable="true">{{person.name}}</span>
-          </td>
-          <td>
-            <span contenteditable="true" (keyup)="changeValue(id, 'firstname', $event)" (blur)="updateList(id, 'firstname', $event)">{{person.firstname}}</span>
-          </td>
-          <td>
-            <span contenteditable="true" (keyup)="changeValue(id, 'email', $event)" (blur)="updateList(id, 'email', $event)">{{person.email}}</span>
-          </td>
+        <ng-container *ngIf="data === ''">
+          <tr  *ngFor="let person of personList; let id = index">
+            <td>
+              <span (keyup)="changeValue(id, 'name', $event)" (blur)="updateList(id, 'name', $event)" contenteditable="true">{{person.name}}</span>
+            </td>
+            <td>
+              <span contenteditable="true" (keyup)="changeValue(id, 'firstname', $event)" (blur)="updateList(id, 'firstname', $event)">{{person.firstname}}</span>
+            </td>
+            <td>
+              <span contenteditable="true" (keyup)="changeValue(id, 'email', $event)" (blur)="updateList(id, 'email', $event)">{{person.email}}</span>
+            </td>  
+            <td>
+              <span class="table-remove">
+                <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" (click)="remove(id)">Remove</button>
+              </span>
+            </td>
+          </tr>
+        </ng-container>
         
-          
-          <td>
-            <span class="table-remove">
-              <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" (click)="remove(id)">Remove</button>
-            </span>
-          </td>
-        </tr>
+         <ng-container *ngIf="data !== ''">
+          <tr  *ngFor="let person of res; let id = index">
+            <td>
+              <span (keyup)="changeValue(id, 'name', $event)" (blur)="updateList(id, 'name', $event)" contenteditable="true">{{person.name}}</span>
+            </td>
+            <td>
+              <span contenteditable="true" (keyup)="changeValue(id, 'firstname', $event)" (blur)="updateList(id, 'firstname', $event)">{{person.firstname}}</span>
+            </td>
+            <td>
+              <span contenteditable="true" (keyup)="changeValue(id, 'email', $event)" (blur)="updateList(id, 'email', $event)">{{person.email}}</span>
+            </td>  
+            <td>
+              <span class="table-remove">
+                <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" (click)="remove(id)">Remove</button>
+              </span>
+            </td>
+          </tr>
+        </ng-container>
       </table>
     </div>
   </div>
