--- a/src/app/collaborateurs/collaborateurs.component.html
+++ b/src/app/collaborateurs/collaborateurs.component.html
@@ -28,7 +28,14 @@
             </td>  
             <td>
               <span class="table-remove">
-                <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" (click)="remove(id)"><i class="fas fa-trash-alt"></i></button>
+                <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" >
+                  <i class="fas fa-pen"></i>
+                </button>
+                <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" >
+                  <i class="fas fa-search"></i>                </button>
+                <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" (click)="remove(id)">
+                  <i class="fas fa-trash-alt"></i>
+                </button>
               </span>
             </td>
           </tr>
@@ -47,7 +54,14 @@
             </td>  
             <td>
               <span class="table-remove">
-                <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" (click)="remove(id)"><i class="fas fa-trash-alt"></i></button>
+                <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" >
+                  <i class="fas fa-pen"></i>
+                </button>
+                <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" >
+                  <i class="fas fa-search"></i>                </button>
+                <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" (click)="remove(id)">
+                  <i class="fas fa-trash-alt"></i>
+                </button>
               </span>
             </td>
           </tr>
