--- a/src/app/collaborateurs/collaborateurs.component.html
+++ b/src/app/collaborateurs/collaborateurs.component.html
@@ -33,7 +33,7 @@
                 </button>
                 <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" >
                   <i class="fas fa-search"></i>                </button>
-                <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" (click)="remove(id)">
+                <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" (click)="remove(person.id)">
                   <i class="fas fa-trash-alt"></i>
                 </button>
               </span>
@@ -59,7 +59,7 @@
                 </button>
                 <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" >
                   <i class="fas fa-search"></i>                </button>
-                <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" (click)="remove(id)">
+                <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" (click)="remove(person.id)">
                   <i class="fas fa-trash-alt"></i>
                 </button>
               </span>
