--- a/src/app/modal-add-collaborateur/modal-add-collaborateur.component.css
+++ b/src/app/modal-add-collaborateur/modal-add-collaborateur.component.css
@@ -1,6 +1,6 @@
 #modal-content-wrapper {
-    width: 100%;
-    height: 100%;
+    width: 150%;
+    height: 150%;
     display: grid;
     grid-template-rows: repeat(1fr, 3);
 }
@@ -12,13 +12,91 @@
 #modal-footer {
     justify-self: right;
     align-self: center;
+    margin-bottom: 20%;
 }
 
 #modal-action-button {
     margin-right: 30px;
     background-color:#ffffff;
+    float: center;
 }
 
 #modal-cancel-button {
     background-color: #ffffff;
+}
+
+.one {
+    margin-bottom: -40px;
+  height: 10%;
+  width: 40%;
+  float: left;
+}
+
+.two {
+    margin-bottom: -40px;
+    height: 10%;
+     width: 40%;
+     align-self: right;
+     float: right;
+}
+.three {
+    margin-bottom: -40px;
+    height: 10%;
+    width: 65%;
+    float: left;
+
+}
+.four {
+    margin-bottom: -40px;
+    height: 10%;
+    width: 20%;
+    float: right;
+    margin-right: 10%;
+}
+.five {
+    margin-bottom: -40px;
+    height: 10%;
+    width: 65%;
+    float: left;
+}
+
+.six {
+    margin-bottom: -40px;
+    height: 10%;
+    width: 40%;
+  float: left;
+}
+
+.seven {
+    margin-bottom: -40px;
+    height: 10%;
+     width: 40%;
+     align-self: right;
+     float: right;
+}
+
+.eight {
+    margin-bottom: -40px;
+     height: 10%;
+     width: 100%;
+     float: left;
+}
+.nine {
+    margin-bottom: -40px;
+     height: 10%;
+     width: 90%;
+     float: left;
+}
+
+.ten {
+    margin-bottom: -40px;
+    height: 10%;
+     width: 90%;
+     float: left;
+}
+
+.eleven {
+    height: 10%;
+     width: 100%;
+     float: left;
 }
