--- a/src/app/modal-add-collaborateur/modal-add-collaborateur.component.html
+++ b/src/app/modal-add-collaborateur/modal-add-collaborateur.component.html
@@ -4,7 +4,7 @@
 
 <div mdbModal #frame="mdbModal" class="modal fade left" id="frameModalTop" tabindex="-1" role="dialog"
      aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-xl" role="document">
     <div class="modal-content">
       <div class="modal-header text-center">
         <h4 class="modal-title w-100 font-weight-bold">Ajouter un collaborateur</h4>
@@ -12,9 +12,10 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body mx-3" style="align-self: center">
+      <div class="modal-body mx-3">
         <div>
-        <div class="md-form mb-5" style="align-self: left">
+          <div class="one">
+        <div class="md-form mb-5">
           <mdb-icon fas icon="user" class="prefix grey-text"></mdb-icon>
           <input type="text" id="form34" class="form-control" mdbInput mdbValidate [formControl]="contactFormModalName">
           <label for="form34">Nom</label>
@@ -27,8 +28,9 @@
             valid
           </mdb-success>
         </div>
-
-        <div class="md-form mb-5" style="align-self: right">
+        </div>
+        <div class="two">
+        <div class="md-form mb-5">
           <mdb-icon fas icon="user" class="prefix grey-text"></mdb-icon>
           <input type="text" id="form34" class="form-control" mdbInput mdbValidate [formControl]="contactFormModalFirstName">
           <label for="form34">Prenom</label>
@@ -42,35 +44,7 @@
           </mdb-success>
         </div>
         </div>
-        <div class="md-form mb-5">
-          <mdb-icon fas icon="calendar" class="prefix grey-text"></mdb-icon>
-          <input type="date" id="form34" class="form-control" mdbInput mdbValidate [formControl]="contactFormModalDate">
-          <label for="form34">Date d'entree</label>
-          <mdb-error
-            *ngIf="contactFormModalDate.invalid && (contactFormModalDate.dirty || contactFormModalDate.touched)">Input
-            invalid
-          </mdb-error>
-          <mdb-success
-            *ngIf="contactFormModalDate.valid && (contactFormModalDate.dirty || contactFormModalDate.touched)">Input
-            valid
-          </mdb-success>
-        </div>
-
-        <div class="md-form mb-5">
-          <mdb-icon fas icon="user" class="prefix grey-text"></mdb-icon>
-          <input type="checkbox" id="form34" class="form-control" mdbInput mdbValidate [formControl]="contactFormModalPrestataire">
-          <label for="form34">Prestataire</label>
-          <mdb-error
-            *ngIf="contactFormModalPrestataire.invalid && (contactFormModalPrestataire.dirty || contactFormModalPrestataire.touched)">Input
-            invalid
-          </mdb-error>
-          <mdb-success
-            *ngIf="contactFormModalPrestataire.valid && (contactFormModalPrestataire.dirty || contactFormModalPrestataire.touched)">Input
-            valid
-          </mdb-success>
-        </div>
-
-
+        <div class="three">
         <div class="md-form mb-5">
           <mdb-icon fas icon="envelope" class="prefix grey-text"></mdb-icon>
           <input type="email" id="form34" class="form-control" mdbInput mdbValidate
@@ -85,7 +59,40 @@
             valid
           </mdb-success>
         </div>
-
+        </div>
+        
+        <div class="four">
+        <div class="md-form mb-5">
+          
+          <mdb-icon fas icon="user" class="prefix grey-text"></mdb-icon>
+          <input type="checkbox" style="margin-top: 15px" id="form34"  mdbInput mdbValidate [formControl]="contactFormModalPrestataire">
+          <label for="form34" style="margin-top: 20px">Prestataire</label>
+          <mdb-error
+            *ngIf="contactFormModalPrestataire.invalid && (contactFormModalPrestataire.dirty || contactFormModalPrestataire.touched)">Input
+            invalid
+          </mdb-error>
+          <mdb-success
+            *ngIf="contactFormModalPrestataire.valid && (contactFormModalPrestataire.dirty || contactFormModalPrestataire.touched)">Input
+            valid
+          </mdb-success>
+        </div>
+        </div>
+        <div class="five">
+        <div class="md-form mb-5">
+          <mdb-icon fas icon="calendar" class="prefix grey-text"></mdb-icon>
+          <input type="date" id="form34" class="form-control" mdbInput mdbValidate [formControl]="contactFormModalDate">
+          <label for="form34">Date d'entree</label>
+          <mdb-error
+            *ngIf="contactFormModalDate.invalid && (contactFormModalDate.dirty || contactFormModalDate.touched)">Input
+            invalid
+          </mdb-error>
+          <mdb-success
+            *ngIf="contactFormModalDate.valid && (contactFormModalDate.dirty || contactFormModalDate.touched)">Input
+            valid
+          </mdb-success>
+        </div>
+        </div>
+        <div class="six">
         <div class="md-form mb-5">
           <mdb-icon fas  class="prefix grey-text"></mdb-icon>
           <select id="form34" class="form-control" mdbInput mdbValidate
@@ -101,7 +108,8 @@
             valid
           </mdb-success>
         </div>
-
+        </div>
+        <div class="seven">
         <div class="md-form mb-5">
           <mdb-icon fas  class="prefix grey-text"></mdb-icon>
           <select id="form34" class="form-control" mdbInput mdbValidate
@@ -117,9 +125,10 @@
             valid
           </mdb-success>
         </div>
-
+        </div>
+        <div class="eight">
         <div class="md-form mb-5">
-          <mdb-icon fas icon="user" class="prefix grey-text"></mdb-icon>
+          <mdb-icon fas icon="file" class="prefix grey-text"></mdb-icon>
           <input type="text" id="form34" class="form-control" mdbInput mdbValidate [formControl]="contactFormModalLinkCV">
           <label for="form34">Lien CV</label>
           <mdb-error
@@ -131,11 +140,12 @@
             valid
           </mdb-success>
         </div>
-
+        </div>
+        <div class="nine">
         <div class="md-form mb-5">
-          <mdb-icon fas icon="photo" class="prefix grey-text"></mdb-icon>
+          <mdb-icon fas icon="camera" class="prefix grey-text"></mdb-icon>
           <input type="file" id="form34" class="form-control" mdbInput mdbValidate [formControl]="contactFormModalPhoto">
-          <label for="form34">Photo</label>
+          <label for="form34"></label>
           <mdb-error
             *ngIf="contactFormModalPhoto.invalid && (contactFormModalPhoto.dirty || contactFormModalPhoto.touched)">Input
             invalid
@@ -145,8 +155,10 @@
             valid
           </mdb-success>
         </div>
+        </div>
+        <div class="ten">
         <div class="md-form mb-5">
-          <mdb-icon fas icon="user" class="prefix grey-text"></mdb-icon>
+          <mdb-icon fas icon="pen" class="prefix grey-text"></mdb-icon>
           <input type="text" id="form56" class="form-control" mdbInput mdbValidate [formControl]="contactFormModalComments">
           <label for="form34">Commentaires</label>
           <mdb-error
@@ -158,8 +170,9 @@
             valid
           </mdb-success>
         </div>
-
+        </div>
       </div>
+      <div class="eleven">
       <div class="modal-footer d-flex justify-content-center">
         
         <button [ngClass]="{disabled : !(contactFormModalEmail.valid && (contactFormModalEmail.dirty || contactFormModalEmail.touched)) 
@@ -169,6 +182,7 @@
           || !(contactFormModalRole.valid && (contactFormModalRole.dirty || contactFormModalRole.touched))}" mdbBtn color="black" class="waves-light" mdbWavesEffect (click)="onSubmit(); frame.hide()"><i class="fas fa-plus"></i>&nbsp;   Ajouter
           
         </button>
+      </div>
       </div>
     </div>
   </div>
