--- a/src/app/collaborateurs/navigationbar.component.css
+++ b/src/app/collaborateurs/navigationbar.component.css
@@ -1,16 +1,17 @@
 .search {
-  width: 50%;
+  width: 100%;
   position: relative;
   display: flex;
-  margin-left: 10%;
+  margin-left: 1%;
+  padding-bottom: 0.5%;
 }
 
 .searchTerm {
-  width: 100%;
+  width: 55%;
   border: 3px solid grey;
   padding: 5px;
-  height: 20px;
-  border-radius: 50px 50px 50px 50px;
+  height: 40px;
+  border-radius: 7px 7px 7px 7px;
   outline: none;
   color: grey;
   padding-left:20px;
@@ -19,11 +20,4 @@
 .searchTerm:focus{
   color: black;
   padding-left:20px;
-}
-
-
-/*Resize the wrap to see the search bar change!*/
-.wrap{
-  position: relative;
-  left: 10%;
 }
