--- a/src/app/collaborateurs/collaborateurs.component.html
+++ b/src/app/collaborateurs/collaborateurs.component.html
@@ -37,8 +37,9 @@
                   <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" >
                     <i class="fas fa-pen"></i>
                   </button>
-                  <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" >
-                    <i class="fas fa-search"></i>                </button>
+                  <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" (click) = "lexicographicalSorting()" >
+                    <i class="fas fa-search"></i>
+                  </button>
                   <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" (click)="remove(person.id)" *ngIf="person.isDelete === false" >
                     <i class="fas fa-trash-alt"></i>
                   </button>
