--- a/src/app/collaborateurs/collaborateurs.component.html
+++ b/src/app/collaborateurs/collaborateurs.component.html
@@ -34,7 +34,7 @@
               </td>  
               <td>
                 <span class="table-remove">
-                  <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" >
+                  <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0"  (click) = "antiLexicographicalSorting()" >
                     <i class="fas fa-pen"></i>
                   </button>
                   <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" (click) = "lexicographicalSorting()" >
@@ -67,10 +67,10 @@
               </td>  
               <td>
                 <span class="table-remove">
-                  <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" >
+                  <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" (click) = "antiLexicographicalSorting()">
                     <i class="fas fa-pen"></i>
                   </button>
-                  <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" >
+                  <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" (click) = "lexicographicalSorting()">
                     <i class="fas fa-search"></i>                </button>
                   <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" (click)="remove(person.id)">
                     <i class="fas fa-trash-alt"></i>
