--- a/src/app/collaborateurs/collaborateurs.component.html
+++ b/src/app/collaborateurs/collaborateurs.component.html
@@ -10,8 +10,8 @@
       <div class="tab-container">
         <table class="table table-bordered table-responsive-md table-striped text-center">
           <tr>
-            <th class="text-center">Nom</th>
-            <th class="text-center">Prenom</th>
+            <th class="text-center">Nom &nbsp;&nbsp;  <i *ngIf="typeSorted===false" (click)="lexicographicalSortingName()" class="fas fa-arrow-down"></i> <i *ngIf="typeSorted===true" (click)="antiLexicographicalSortingName()" class="fas fa-arrow-up"></i></th>
+            <th class="text-center">Prenom &nbsp;&nbsp;<i *ngIf="typeSortedFN===false" (click)="lexicographicalSortingFirstName()" class="fas fa-arrow-down"></i> <i *ngIf="typeSortedFN===true" (click)="antiLexicographicalSortingFirstName()" class="fas fa-arrow-up"></i></th>
             <th class="text-center">Adresse mail</th>
             <th class="text-center">Actions</th>
           </tr>
@@ -34,10 +34,10 @@
               </td>  
               <td>
                 <span class="table-remove">
-                  <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0"  (click) = "antiLexicographicalSorting()" >
+                  <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" >
                     <i class="fas fa-pen"></i>
                   </button>
-                  <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" (click) = "lexicographicalSorting()" >
+                  <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0">
                     <i class="fas fa-search"></i>
                   </button>
                   <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" (click)="remove(person.id)" *ngIf="person.isDelete === false" >
@@ -67,10 +67,10 @@
               </td>  
               <td>
                 <span class="table-remove">
-                  <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" (click) = "antiLexicographicalSorting()">
+                  <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" >
                     <i class="fas fa-pen"></i>
                   </button>
-                  <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" (click) = "lexicographicalSorting()">
+                  <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" >
                     <i class="fas fa-search"></i>                </button>
                   <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" (click)="remove(person.id)">
                     <i class="fas fa-trash-alt"></i>
